[package]
name = "fema"
version = "0.1.0"
authors = ["Thor McAvenia <mcaveniathor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.3"
directories = "3.0.1"
log4rs = {version = "0.13.0"}

confy = "0.4.0"
log = "0.4.11"
tokio = {version = "0.2", features = ["full"]}
